--- a/view/html/landscapenew.html
+++ b/view/html/landscapenew.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Pimp</title>
-    <link rel="stylesheet" type="text/css" href="landscape.css">
+    <link rel="stylesheet" type="text/css" href="../css/landscape.css">
 </head>
 <body>
     <div class="left-container">
