--- a/view/html/landscape.html
+++ b/view/html/landscape.html
@@ -2,60 +2,119 @@
 <html>
 <head>
     <title>Pimp</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/landscape.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/menuTest.css">
+
 </head>
 <body>
-    <div class="left-container">
-        <div class="top-container">
-            <a href="main.html">
-                <button class="PI-button"></button>
-            </a>
+    <div class="wrapper">
+        <div id="Bild">
+            <img id="zoomedImage" src="../pictures/Prozesse.png" alt="Beschreibung des Bildes">
         </div>
-        <div class="middle-container">
-            <button class="mode-button-sim"> simulate </button>
-            <br><br>
-            <button class="mode-button-edit"> edit </button>
-            <br><br>
-            <button class="mode-button-approve"> approve </button>
-        </div>
-        <div class="bottom-container">
-            <button class="settings-button">settings</button>
-        </div>
-    </div> 
-    <div class="right-container">
-        <div class="map-container">
-            <div class="pic"></div>
-            <div class="popup" onclick="myFunction()">add
-                <span class="popuptext" id="myPopup">
-                    <form>
-                        <label>process</label>
-                        <input type="text"><br><br>
-                        <label>ID</label>
-                        <input type="text"><br><br>
-                        <label>process group</label>
-                        <input type="text"><br><br>
-                        <label>following ID</label>
-                        <input type="text"><br><br>
-                        <label>preceding ID</label>
-                        <input type="text"><br><br>
-                        <button>submit</button>
-                      </form>
-                </span>
+
+        <button id="btn-left" class="btn" type="button"></button>
+        <button id="btn-right" class="btn" type="button" ></button>
+        <button id="btn-down" class="btn" type="button" ></button>
+
+        <aside id="sidebar-left">
+            <div id="pic-div"></div>
+            <nav id="BA-Modes">
+                <div class="nav flex-column nav-pills me-3" id="nav-tool-tab" role="tablist" aria-orientation="vertical">
+                    <h3>Mode:</h3>
+                    <a class="nav-link active" id="v-pills-watch-tab" data-bs-toggle="pill" data-bs-target="#v-pills-watch" type="button" role="tab" aria-controls="v-pills-watch" aria-selected="false">Watch</a>
+                    <a class="nav-link" id="v-pills-sim-tab" data-bs-toggle="pill" data-bs-target="#v-pills-sim" type="button" role="tab" aria-controls="v-pills-sim" aria-selected="false">Simulation</a>
+                    <a class="nav-link" id="v-pills-edit-tab" data-bs-toggle="pill" data-bs-target="#v-pills-edit" type="button" role="tab" aria-controls="v-pills-edit" aria-selected="false">Editor</a>
+                    <a class="nav-link" id="v-pills-app-tab" data-bs-toggle="pill" data-bs-target="#v-pills-app" type="button" role="tab" aria-controls="v-pills-app" aria-selected="false">Approver</a>
+                </div>
+            </nav>
+            <nav id="LY-div">
+                <div class="nav flex-column nav-pills me-3" id="nav-layer-tab" role="tablist" aria-orientation="vertical">
+                    <h3>Layer:</h3>
+                    <a class="nav-link active" id="v-pills-1-tab" data-bs-toggle="pill" data-bs-target="#v-pills-1" type="button" role="tab" aria-controls="v-pills-1" aria-selected="true">1</a>
+                    <a class="nav-link" id="v-pills-2-tab" data-bs-toggle="pill" data-bs-target="#v-pills-2" type="button" role="tab" aria-controls="v-pills-2" aria-selected="false">2</a>
+                    <a class="nav-link" id="v-pills-3-tab" data-bs-toggle="pill" data-bs-target="#v-pills-3" type="button" role="tab" aria-controls="v-pills-3" aria-selected="false">3</a>
+                </div>
+            </nav>
+        </aside>
+        <aside id="sidebar-right">
+            <div class="input-group mb-3">
+                <button class="btn btn-outline-secondary" type="button" id="button-addon1">S</button>
+                <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
             </div>
-            <script>
-                function myFunction() {
-                  var popup = document.getElementById("myPopup");
-                  popup.classList.toggle("show");
-                }
-            </script>
-        </div>
-        <div class="time-container">
-            <div style="text-align: right;">
-                <button>hours</button>
-                <button>days</button>
-                <button>weeks</button>
+            <div class="card" id="card-div">
+                <div class="tab-content" id="v-pills-tabContent">
+                    <div class="tab-pane fade show active" id="v-pills-watch" aria-labelledby="v-pills-watch-tab" role="tabpanel" tabindex="0">
+                        <h3>Tools:</h3>
+                        <button class="btn" id="tool-btn">Some Tools</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                    </div>
+                    <div class="tab-pane fade" id="v-pills-app" role="tabpanel" aria-labelledby="v-pills-app-tab" tabindex="1">
+                        <h3>Approver-Tools:</h3>
+                        <button class="btn" id="tool-btn">Some Tools</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                    </div>
+                    <div class="tab-pane fade" id="v-pills-sim" role="tabpanel" aria-labelledby="v-pills-sim-tab" tabindex="2">
+                        <h3>Sim-Tools:</h3>
+                        <button class="btn" id="tool-btn">Some Tools</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                    </div>
+                    <div class="tab-pane fade" id="v-pills-edit" role="tabpanel" aria-labelledby="v-pills-edit-tab" tabindex="3">
+                        <h3>Edit-Tools:</h3>
+                        <button class="btn" id="tool-btn">Some Tools</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                        <button class="btn" id="tool-btn">Beispiel</button>
+                    </div>
+                </div>
             </div>
-        </div>
+        </aside>
+        <aside id="sidebar-down">
+            <nav>
+                <div class="nav nav-tabs justify-content-end" id="nav-tab" role="tablist">
+                    <button class="nav-link active" id="nav-hour-tab" data-bs-toggle="tab" data-bs-target="#nav-hour" type="button" role="tab" aria-controls="nav-hour" aria-selected="true">Hours</button>
+                    <button class="nav-link" id="nav-day-tab" data-bs-toggle="tab" data-bs-target="#nav-day" type="button" role="tab" aria-controls="nav-day" aria-selected="false">Days</button>
+                    <button class="nav-link" id="nav-week-tab" data-bs-toggle="tab" data-bs-target="#nav-week" type="button" role="tab" aria-controls="nav-week" aria-selected="false">Weeks</button>
+                    <button class="nav-link" id="nav-month-tab" data-bs-toggle="tab" data-bs-target="#nav-month" type="button" role="tab" aria-controls="nav-month" aria-selected="false">Months</button>
+                </div>
+            </nav>
+            <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="nav-hour" role="tabpanel" aria-labelledby="nav-hour-tab" tabindex="0">...</div>
+                <div class="tab-pane fade" id="nav-day" role="tabpanel" aria-labelledby="nav-day-tab" tabindex="1">...</div>
+                <div class="tab-pane fade" id="nav-week" role="tabpanel" aria-labelledby="nav-week-tab" tabindex="2">...</div>
+                <div class="tab-pane fade" id="nav-month" role="tabpanel" aria-labelledby="nav-month-tab" tabindex="3">
+                    <img src="../pictures/Zeitstrahl.png " alt="Fehler beim Laden der Datei" >
+                </div>
+              </div>
+        </aside>
+        
+        <button class="btn" id="btn-zoom-in">+</button>
+        <button class="btn" id="btn-zoom-out">-</button>
     </div>
+
+    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script src="../../model/menü.js"></script>
+    <script src="../../model/zoom.js"></script>
+
 </body>
 </html>
