--- a/view/html/landscapenew.html
+++ b/view/html/landscapenew.html
@@ -5,17 +5,31 @@
     <link rel="stylesheet" type="text/css" href="../css/landscape.css">
 </head>
 <body>
-    <div class="left-container">
-    </div>
-    <div class="middle-container">
-        <div class="upper-container">
+    <div class="map-container">
+        <div class="pic"></div>
+        <div class="popup" onclick="myFunction()">add
+            <span class="popuptext" id="myPopup">
+                <form>
+                    <label>process</label>
+                    <input type="text"><br><br>
+                    <label>ID</label>
+                    <input type="text"><br><br>
+                    <label>process group</label>
+                    <input type="text"><br><br>
+                    <label>following ID</label>
+                    <input type="text"><br><br>
+                    <label>preceding ID</label>
+                    <input type="text"><br><br>
+                    <button>submit</button>
+                  </form>
+            </span>
         </div>
-        <div class="lower-container">
-            <div class="time-line-container"></div>
-            <div class="time-container"></div>
-        </div>
-    </div>
-    <div class="right-container">
+        <script>
+            function myFunction() {
+              var popup = document.getElementById("myPopup");
+              popup.classList.toggle("show");
+            }
+        </script>
     </div>
 </body>
 </html>
