--- a/view/html/landscape.html
+++ b/view/html/landscape.html
@@ -5,20 +5,179 @@
     <link rel="stylesheet" type="text/css" href="../css/landscape.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/menuTest.css">
+    <style>
 
+
+    </style>
 </head>
 <body>
     <div class="wrapper">
-        <div id="Bild">
-            <img id="zoomedImage" src="../pictures/Prozesse.png" alt="Beschreibung des Bildes">
+        <div class="tab-content" id="nav-layer-tabContent">
+            <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="v-pills-1">   
+                <canvas id="myCanvas-1" width="2500" height="2000">
+                    <script>
+                        var c = document.getElementById("myCanvas-1");
+                        var ctx = c.getContext("2d");
+
+                        ctx.beginPath();
+                        ctx.arc(300, 170, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(320, 205);
+                        ctx.lineTo(600, 370);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(635, 390, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(625, 430);
+                        ctx.lineTo(500, 670);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(470, 695, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(675, 400);
+                        ctx.lineTo(1000, 470);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(1040, 470, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(1050, 430);
+                        ctx.lineTo(1350, 120);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(1390, 120, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(1050, 510);
+                        ctx.lineTo(1250, 720);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(1278, 748, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+                    </script>
+                </canvas>
+            </div>
+            <div class="tab-pane fade show active" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-2">   
+                <canvas id="myCanvas-2" width="2500" height="2000">
+                    <script>
+                        var c = document.getElementById("myCanvas-2");
+                        var ctx = c.getContext("2d");
+
+                        ctx.beginPath();
+                        ctx.arc(300, 170, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(320, 205);
+                        ctx.lineTo(600, 370);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(635, 390, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(625, 430);
+                        ctx.lineTo(500, 670);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(470, 695, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(675, 400);
+                        ctx.lineTo(1000, 470);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(1040, 470, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(1050, 430);
+                        ctx.lineTo(1350, 120);
+                        ctx.stroke();
+
+
+
+                        ctx.moveTo(1050, 510);
+                        ctx.lineTo(1250, 720);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(1278, 748, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+                    </script>
+                </canvas>
+            </div>
+            <div class="tab-pane fade show active" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-3">   
+                <canvas id="myCanvas-3" width="2500" height="2000">
+                    <script>
+                        var c = document.getElementById("myCanvas-3");
+                        var ctx = c.getContext("2d");
+
+                        ctx.beginPath();
+                        ctx.arc(300, 170, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(320, 205);
+                        ctx.lineTo(600, 370);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(635, 390, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(625, 430);
+                        ctx.lineTo(500, 670);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(470, 695, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(675, 400);
+                        ctx.lineTo(1000, 470);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(1040, 470, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(1050, 430);
+                        ctx.lineTo(1350, 120);
+                        ctx.stroke();
+
+                        ctx.beginPath();
+                        ctx.arc(1390, 120, 40, 0, 2 * Math.PI);
+                        ctx.stroke();
+
+                        ctx.moveTo(1050, 510);
+                        ctx.lineTo(1250, 720);
+                        ctx.stroke();
+
+
+                    </script>
+                </canvas>
+            </div>
+        </div> 
+        <div id="btn-div-left">
+            <button id="btn-left" class="btn" type="button"></button>
+        </div>
+        <div id="btn-div-right">
+            <button id="btn-right" class="btn" type="button" ></button>
+        </div>
+        <div id="btn-div-down">
+            <button id="btn-down" class="btn" type="button"></button>
         </div>
 
-        <button id="btn-left" class="btn" type="button"></button>
-        <button id="btn-right" class="btn" type="button" ></button>
-        <button id="btn-down" class="btn" type="button" ></button>
-
         <aside id="sidebar-left">
-            <div id="pic-div"></div>
+            <a href="main.html" id="pic-div"></a>
             <nav id="BA-Modes">
                 <div class="nav flex-column nav-pills me-3" id="nav-tool-tab" role="tablist" aria-orientation="vertical">
                     <h3>Mode:</h3>
@@ -42,48 +201,46 @@
                 <button class="btn btn-outline-secondary" type="button" id="button-addon1">S</button>
                 <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
             </div>
-            <div class="card" id="card-div">
-                <div class="tab-content" id="v-pills-tabContent">
-                    <div class="tab-pane fade show active" id="v-pills-watch" aria-labelledby="v-pills-watch-tab" role="tabpanel" tabindex="0">
-                        <h3>Tools:</h3>
-                        <button class="btn" id="tool-btn">Some Tools</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                    </div>
-                    <div class="tab-pane fade" id="v-pills-app" role="tabpanel" aria-labelledby="v-pills-app-tab" tabindex="1">
-                        <h3>Approver-Tools:</h3>
-                        <button class="btn" id="tool-btn">Some Tools</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                    </div>
-                    <div class="tab-pane fade" id="v-pills-sim" role="tabpanel" aria-labelledby="v-pills-sim-tab" tabindex="2">
-                        <h3>Sim-Tools:</h3>
-                        <button class="btn" id="tool-btn">Some Tools</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                    </div>
-                    <div class="tab-pane fade" id="v-pills-edit" role="tabpanel" aria-labelledby="v-pills-edit-tab" tabindex="3">
-                        <h3>Edit-Tools:</h3>
-                        <button class="btn" id="tool-btn">Some Tools</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                        <button class="btn" id="tool-btn">Beispiel</button>
-                    </div>
+            <div class="tab-content" id="v-pills-tabContent">
+                <div class="tab-pane fade show active" id="v-pills-watch" aria-labelledby="v-pills-watch-tab" role="tabpanel" tabindex="0">
+                    <h3>Tools:</h3>
+                    <button class="btn" id="tool-btn">Some Tools</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                </div>
+                <div class="tab-pane fade" id="v-pills-app" role="tabpanel" aria-labelledby="v-pills-app-tab" tabindex="1">
+                    <h3>Approver-Tools:</h3>
+                    <button class="btn" id="tool-btn">Some Tools</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                </div>
+                <div class="tab-pane fade" id="v-pills-sim" role="tabpanel" aria-labelledby="v-pills-sim-tab" tabindex="2">
+                    <h3>Sim-Tools:</h3>
+                    <button class="btn" id="tool-btn">Some Tools</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                </div>
+                <div class="tab-pane fade" id="v-pills-edit" role="tabpanel" aria-labelledby="v-pills-edit-tab" tabindex="3">
+                    <h3>Edit-Tools:</h3>
+                    <button class="btn" id="tool-btn">Some Tools</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Beispiel</button>
                 </div>
             </div>
         </aside>
@@ -105,7 +262,6 @@
                 </div>
               </div>
         </aside>
-        
         <button class="btn" id="btn-zoom-in">+</button>
         <button class="btn" id="btn-zoom-out">-</button>
     </div>
