--- a/view/css/menuTest.css
+++ b/view/css/menuTest.css
@@ -14,6 +14,7 @@
 
     overflow: hidden;
 }
+
 /************************************
 ****    Button CSS          *********
 ************************************/
@@ -102,7 +103,7 @@
     flex-direction: column;
     align-items: center;
 
-    padding: 10%;
+    padding: 20%;
 }
 
 #sidebar-down {
@@ -229,14 +230,17 @@ h3 {
     margin-bottom: 3%;
     padding: 1%;
     background-color: rgb(175, 175, 175);
+
 }
 #card-div {
     width: 90%;
 }   
 #v-pills-tabContent{
     background-color: blue;
-    padding: 5%;
+    border-radius: 10px;
+    max-height: 50%;
 }
+
 /*****************************
 ****** Button divs      ******
 *****************************/
