--- a/view/html/main.html
+++ b/view/html/main.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
     <title>PIMP</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <style>
-    </style>
 </head>
 <body>
     <div class="left-container">
