--- a/view/html/datensicht.html
+++ b/view/html/datensicht.html
@@ -14,13 +14,18 @@
             <img id="zoomedImage" src="../pictures/Prozesse.png" alt="Beschreibung des Bildes">
         </div>
 
-        <button id="btn-left" class="btn" type="button"></button>
-        <button id="btn-right" class="btn" type="button" ></button>
-        <button id="btn-down" class="btn" type="button" ></button>
+        <div id="btn-div-left">
+            <button id="btn-left" class="btn" type="button"></button>
+        </div>
+        <div id="btn-div-right">
+            <button id="btn-right" class="btn" type="button" ></button>
+        </div>
+        <div id="btn-div-down">
+            <button id="btn-down" class="btn" type="button"></button>
+        </div>
 
         <aside id="sidebar-left">
-            
-            <div id="pic-div"></div>
+            <a href="main.html" id="pic-div"></a>
             <nav id="BA-Modes">
                 <div class="nav flex-column nav-pills me-3" id="nav-tool-tab" role="tablist" aria-orientation="vertical">
                     <h3>Mode:</h3>
@@ -41,8 +46,8 @@
         </aside>
         <aside id="sidebar-right-meta">
             <div class="input-group mb-3" id="searchbar">
-                <button class="btn btn-outline-secondary" type="button" id="button-addon1">S</button>
-                <input type="text" class="form-control" placeholder="Seach" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                <button class="btn btn-outline-secondary" type="button" id="Search-btn">S</button>
+                <input type="text" class="form-control" placeholder="Seach" aria-label="Example text with button addon" aria-describedby="Searh-btn">
             </div>
             <div class="card" id="card-div">
                 <table class="table table-bordered">
