--- a/view/html/landscape.html
+++ b/view/html/landscape.html
@@ -198,8 +198,8 @@
         </aside>
         <aside id="sidebar-right">
             <div class="input-group mb-3">
-                <button class="btn btn-outline-secondary" type="button" id="button-addon1">S</button>
-                <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                <button class="btn btn-outline-secondary" type="button" id="Search-btn">S</button>
+                <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="Search-btn">
             </div>
             <div class="tab-content" id="v-pills-tabContent">
                 <div class="tab-pane fade show active" id="v-pills-watch" aria-labelledby="v-pills-watch-tab" role="tabpanel" tabindex="0">
@@ -234,9 +234,9 @@
                 </div>
                 <div class="tab-pane fade" id="v-pills-edit" role="tabpanel" aria-labelledby="v-pills-edit-tab" tabindex="3">
                     <h3>Edit-Tools:</h3>
-                    <button class="btn" id="tool-btn">Some Tools</button>
-                    <button class="btn" id="tool-btn">Beispiel</button>
-                    <button class="btn" id="tool-btn">Beispiel</button>
+                    <button class="btn" id="tool-btn">Delete Point</button>
+                    <button class="btn" id="tool-btn">Edit Point</button>
+                    <button class="btn" id="tool-btn">Create new Point</button>
                     <button class="btn" id="tool-btn">Beispiel</button>
                     <button class="btn" id="tool-btn">Beispiel</button>
                     <button class="btn" id="tool-btn">Beispiel</button>
