--- a/view/css/menuTest.css
+++ b/view/css/menuTest.css
@@ -236,13 +236,20 @@ h3 {
 }
 #card-div {
     width: 90%;
-}   
-#v-pills-tabContent{
-    background-color: #0051A0;
-    border-radius: 10px;
-    max-height: 50%;
 }
 
+#v-pills-watch, #v-pills-edit, #v-pills-app, #v-pills-sim{
+    padding: 10%;
+    background-color: #0051A0;
+    border-radius: 10px;
+
+    min-width: 10vw;
+    margin-bottom: 10%;
+
+}
+#v-pills-tabContent{
+    min-width: 90%;
+}
 #Search-btn {
     background-color: #0051A0;
 }
